--- a/src/app/shared/components/signin-dialog/signin-dialog.component.html
+++ b/src/app/shared/components/signin-dialog/signin-dialog.component.html
@@ -23,8 +23,7 @@
           In </button>
         <br>
         <br>
-        <a routerLink="/">Forgot Password?</a>
-        <a routerLink="/" style="float: right;">Want to register?</a>
+        <p class="alert alert-danger" style="text-align: center;">Any issue with login or password contact<br>ninemilesmocks@gmail.com</p>
       </form>
     </div>
 
