--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,21 +1,34 @@
 .mat-card {
   border-radius: 20px;
   width: 100%;
+  margin: 0 auto;
+  box-shadow: 1px 2px 5px 2px lightgray;
 }
 
-.btn-info {
-  background-color: #5883d0;
+.mat-raised-button {
+  /* background-color: #5883d0; */
   float: right;
   border-radius: 15px;
   position: relative;
   bottom: 7px;
+}
+.mat-raised-button:hover {
+  background-color: #7258BF;
+  color: white;
+  /* float: right;
+  border-radius: 15px;
+  position: relative;
+  bottom: 7px; */
 }
 .user {
   text-align: center;
   margin: 0 auto;
 }
 
-
-.icon{
+.icon {
   cursor: pointer;
+}
+
+.writing-icon {
+  width: 20px;
 }
