--- a/src/app/teacher/show-writing/show-writing.component.html
+++ b/src/app/teacher/show-writing/show-writing.component.html
@@ -10,11 +10,11 @@
             <td>Username</td>
             <td>Test Number</td>
             <td>Sheet Number</td>
-            <td>Marks Band</td>
+            <td>Sheet Marking</td>
             <td>Section</td>
             <td>Question</td>
             <td>Answer Image</td>
-            <td>is Checked</td>
+            <td>Checked Status</td>
             <td>Update Marks</td>
             <!-- <td></td>
           <td>Submitted On</td> -->
