--- a/src/app/admin-panel/add-links/add-links.component.html
+++ b/src/app/admin-panel/add-links/add-links.component.html
@@ -2,14 +2,16 @@
   <div class="row">
     <div class="col-sm-12">
       <a routerLink="/admin-panel">Back</a>
-      <h2>Links</h2>
+      <br>
+      <!-- <h2>Links</h2> -->
       <mat-form-field style="max-width: 200px;">
         <mat-label>Student Type</mat-label>
         <mat-select>
-          <mat-option *ngFor="let type of studentTypes" [value]="type" (click)="changeStudentType(type)">{{type}}
+          <mat-option *ngFor="let type of studentTypes" (click)="changeStudentType(type)">{{type}}
           </mat-option>
         </mat-select>
       </mat-form-field>
+      <p>Links for {{changeType}}</p>
       <div class="table-responsive">
 
         <table class="table table-bordered">
