--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,6 +5,7 @@
             <div>
                 <div class="col-sm-12">
                     <span class="name">
+                        <img src="../../assets/user.png" alt="profile-dummy-image">
                         <h4>{{name| titlecase}}</h4>
                     </span>
                     <span class="username">{{username}}</span><br>
