--- a/src/app/shared/components/main-nav/main-nav.component.html
+++ b/src/app/shared/components/main-nav/main-nav.component.html
@@ -11,20 +11,24 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content class="mat-sidenav-content">
-    <span>
+    <span *ngIf="username">
 
       <mat-toolbar color="primary">
 
         <span routerLink="/" style="cursor: pointer">Reality Check</span>
         <span style="flex:1 1 auto;"></span>
+        <span *ngIf="username">
 
-        <div class="buttons" *ngIf="username">
-          <span [matMenuTriggerFor]="menu" class="navigate"><img src="../../../../assets/logout.png"
-              class="icon"></span>
-          <mat-menu #menu="matMenu" > 
-            <span mat-menu-item (click)="authService.SignOut()">Logout</span>
-          </mat-menu>
-        </div>
+          <div class="buttons">
+            <span [matMenuTriggerFor]="menu" class="navigate"><img src="../../../../assets/logout.png"
+                class="icon"></span>
+            <mat-menu #menu="matMenu">
+              <span mat-menu-item (click)="authService.SignOut()">Logout</span>
+            </mat-menu>
+          </div>
+        </span>
+
+
       </mat-toolbar>
     </span>
 
