--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,12 +1,17 @@
 <div class="jumbotron">
-    <h1 class="display-4">Reality Check</h1>
-    <p class="lead">Your next step to international opportunity</p>
-    <hr class="my-4">
-    <p>Take our mock test and ready to Achieve Desired Bands, Be Our Next Success Story!</p>  
+    <div class="inner-container">
 
-    <button mat-raised-button class="signin" (click)="onSignInDialog()"> Log In <i class="material-icons">
-            vpn_key
-        </i></button>
+        <h1 class="display-4">Reality Check</h1>
+        <h3>By</h3>
+        <p><img src="../../assets/ninemiles.png" class="ninemiles"></p>
+        <p class="lead">Your next step to international opportunity</p>
+        <hr class="my-4">
+        <p>Take our mock test and ready to Achieve Desired Bands, Be Our Next Success Story!</p>
 
+        <button mat-raised-button class="signin" (click)="onSignInDialog()"> Log In <i class="material-icons">
+                vpn_key
+            </i></button>
+
+    </div>
 
 </div>
