--- a/src/app/teacher/teacher.component.html
+++ b/src/app/teacher/teacher.component.html
@@ -8,14 +8,14 @@
             <app-show-writing></app-show-writing>
           </ng-template>
         </mat-tab>
-        <!-- <mat-tab class="mat-tab" label="Upload Document">
-          <ng-template matTabContent>
-            <app-upload-answer-sheet></app-upload-answer-sheet>
-          </ng-template>
-        </mat-tab> -->
         <mat-tab class="mat-tab" label="Upload Marks">
           <ng-template matTabContent>
             <app-update-marks></app-update-marks>
+          </ng-template>
+        </mat-tab>
+        <mat-tab class="mat-tab" label="Attendance">
+          <ng-template matTabContent>
+            <app-attendance></app-attendance>
           </ng-template>
         </mat-tab>
 
