--- a/src/app/teacher/attendance/attendance.component.css
+++ b/src/app/teacher/attendance/attendance.component.css
@@ -1,5 +1,5 @@
 .mat-form-field {
-  width: 100%;
+  width: 70%;
 }
 .message {
   /* font-size: 16px; */
@@ -13,7 +13,12 @@
   height: auto;
 }
 
-.show-more:hover{
+.show-more:hover {
   color: brown;
   cursor: pointer;
+}
+
+.table-responsive {
+  overflow: auto;
+  max-height: 350px;
 }
