--- a/src/app/teacher/attendance/attendance.component.html
+++ b/src/app/teacher/attendance/attendance.component.html
@@ -1,8 +1,6 @@
-<br>
-<br>
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-5">
             <h3>Mark your attendance</h3>
             for <b>
                 {{todayDate | date}}
@@ -10,14 +8,6 @@
             <form [formGroup]="AttendanceFormGroup" #AttendanceForm="ngForm"
                 (ngSubmit)="onSubmitAttendance(AttendanceForm)">
 
-                <!-- <mat-form-field appearance="outline" class="example-full-width">
-                    <input matInput (click)="picker.open()" [matDatepicker]="picker" readonly [min]="minDate"
-                        [max]="maxDate" ngModel name="Date" formControlName="date" id="date" placeholder="Choose a date"
-                        required>
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker disabled=false touchUi #picker></mat-datepicker>
-                    <mat-error *ngIf="hasError('date', 'required')">Date is required</mat-error>
-                </mat-form-field> -->
                 <mat-form-field appearance="outline">
                     <input matInput readonly [format]="24" placeholder="click to enter time" name="time"
                         formControlName="time" [ngxTimepicker]="picker">
@@ -31,35 +21,49 @@
                     <mat-label>Write your task</mat-label>
                     <textarea matInput rows="10" formControlName="message" name="message"></textarea>
                 </mat-form-field>
-                <button mat-raised-button style="width: 100%;" [disabled]="!AttendanceFormGroup.valid">Submit</button>
+                <button mat-raised-button style="width: 70%;" [disabled]="!AttendanceFormGroup.valid">Submit</button>
 
             </form>
 
         </div>
 
-        <div class="col-md-12">
-            <br>
-            <br>
-            <br>
-            <div class="table-responsive">
-                <table class="table table-bordered">
-                    <tr *ngFor="let attendance of attendanceInfo">
-                        <td style="min-width:120px ;">{{attendance.date}}</td>
-                        <td *ngFor="let item of attendance.attendanceData">
-                            <h4>At: {{item.time}}</h4>
-                            <div [class.show]="item.visible" class="message">
-                                <b>Task:</b> {{item.message}}
-                            </div>
+        <div class="col-md-7">
+            <div class="row">
+                <div class="col-md-12">
+                    <p>Show attendance</p>
+                    <mat-form-field>
+                        <input matInput (click)="datePicker.open()" [matDatepicker]="datePicker" readonly
+                            [min]="minDate" [max]="maxDate" id="date" [(ngModel)]="date" placeholder="Choose a date"
+                            required>
+                        <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
+                        <mat-datepicker disabled=false #datePicker></mat-datepicker>
+                    </mat-form-field>
+                    &nbsp;
+                    <button mat-stroked-button (click)="getAttendanceData(date)">Search</button>
 
-                            <strong>
-                                <span class="show-more"
-                                    (click)="item.visible = !item.visible">{{ item.visible ? 'Show less': 'Show More' }}</span>
-                            </strong>
+                    <div *ngIf="attendanceInfo">
+                        <p>Showing results for:<strong> {{currentDate}}</strong></p>
+                        <div class="table-responsive">
+                            <table class="table table-bordered">
+                                <tr>
+                                    <td>At:</td>
+                                    <td>Task:</td>
+                                </tr>
+                                <tr *ngFor="let attendance of attendanceInfo">
+                                    <td>{{attendance.time}}</td>
+                                    <td style="text-align: justify;">{{attendance.message}}</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                    <div *ngIf="!attendanceInfo">
+                        <h3 style="text-align: center;">No Record found</h3>
+                    </div>
 
-                        </td>
-                    </tr>
-                    <!-- </div> -->
-                </table>
+
+
+                </div>
             </div>
         </div>
     </div>
+</div>
