--- a/src/app/teacher/teacher.component.html
+++ b/src/app/teacher/teacher.component.html
@@ -3,19 +3,19 @@
     <div class="col-sm-12">
 
       <mat-tab-group class="mat-tab-groups" mat-align-tabs="center">
-        <mat-tab class="mat-tab" label="Writing Answers">
+        <mat-tab class="mat-tab" label="Attendance">
+          <ng-template matTabContent>
+            <app-attendance></app-attendance>
+          </ng-template>
+        </mat-tab>
+        <mat-tab class="mat-tab" label="Writing Answers (Mock)">
           <ng-template matTabContent>
             <app-show-writing></app-show-writing>
           </ng-template>
         </mat-tab>
-        <mat-tab class="mat-tab" label="Upload Marks">
+        <mat-tab class="mat-tab" label="Upload Marks (Mock)">
           <ng-template matTabContent>
             <app-update-marks></app-update-marks>
-          </ng-template>
-        </mat-tab>
-        <mat-tab class="mat-tab" label="Attendance">
-          <ng-template matTabContent>
-            <app-attendance></app-attendance>
           </ng-template>
         </mat-tab>
 
