--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -42,11 +42,17 @@
 
       <div class="user" *ngIf="userType==='Admin'">
         <h2>Admin User</h2>
-        <a routerLink="/admin-panel">Go to Admin Panel</a>
+        <button routerLink="/admin-panel" mat-stroked-button color="primary">Admin Panel<i class="material-icons">
+            arrow_right_alt
+          </i></button>
+        <br><br><br>
       </div>
       <div class="user" *ngIf="userType==='Teacher'">
         <h2>Teacher</h2>
-        <a routerLink="/teacher">Go to Teacher Panel</a>
+        <button routerLink="/teacher" mat-stroked-button color="primary">Teacher Panel<i class="material-icons">
+            arrow_right_alt
+          </i></button>
+        <br><br><br>
       </div>
 
       <div class="icon" style="text-align: center;">
