--- a/src/app/teacher/teacher.component.html
+++ b/src/app/teacher/teacher.component.html
@@ -3,6 +3,11 @@
     <div class="col-sm-12">
 
       <mat-tab-group class="mat-tab-groups" mat-align-tabs="center">
+        <mat-tab class="mat-tab" label="File Sharing">
+          <ng-template matTabContent>
+            <app-shared-files></app-shared-files>
+          </ng-template>
+        </mat-tab>
         <mat-tab class="mat-tab" label="Leaves">
           <ng-template matTabContent>
             <app-leaves></app-leaves>
