--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,9 @@
       <hr>
     </div>
     <div style="margin: 0 auto;" *ngIf="userType==='Academic Student' || userType==='General Student'">
-      <button mat-raised-button routerLink="/marks-sheet"><img src="../../assets/document.png">Marks Sheet</button>
+      <button mat-stroked-button routerLink="/marks-sheet"><img src="../../assets/document.png">Marks Sheet</button>
+      <button mat-stroked-button routerLink="/file-sharing"><img src="../../assets/file.png" class="file-icon">File
+        Sharing</button>
     </div>
     <div class="col-sm-12" style="text-align: center">
       <div *ngIf="userType==='Academic Student' || userType==='General Student'">
