Background color changed

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,8 +9,10 @@
       <hr>
     </div>
     <div style="margin: 0 auto;" *ngIf="userType==='Academic Student' || userType==='General Student'">
-      <button mat-stroked-button routerLink="/marks-sheet"><img src="../../assets/document.png">Marks Sheet</button>
-      <button mat-stroked-button routerLink="/file-sharing"><img src="../../assets/file.png" class="file-icon">File
+      <button mat-stroked-button routerLink="/student/marks-sheet"><img src="../../assets/document.png">Marks
+        Sheet</button>
+      <button mat-stroked-button routerLink="/student/file-sharing"><img src="../../assets/file.png"
+          class="file-icon">File
         Sharing</button>
     </div>
     <div class="col-sm-12" style="text-align: center">
