--- a/src/app/student/file-sharing/file-sharing.component.html
+++ b/src/app/student/file-sharing/file-sharing.component.html
@@ -2,7 +2,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <h4>Share files with students</h4>
+            <a routerLink="/">Back</a>
+            <h4>Share files with teachers</h4>
             <form novalidate [formGroup]="SharedFileFormGroup" #SharedForm="ngForm" (ngSubmit)="shareFileHandler()">
 
                 <ngx-select-dropdown (change)="selectionChanged($event)" name="sharedPeople"
@@ -26,6 +27,7 @@
         </div>
 
         <div id="shared" class="col-md-6">
+
             <h4>Shared Files</h4>
             <mat-tab-group class="mat-tab-groups" mat-align-tabs="center">
                 <mat-tab class="mat-tab" label="Shared with me">
@@ -74,9 +76,9 @@
                                                 </i></button>
                                         </a>
                                     </span><br>
-                                    <div>
+                                    <p>
                                         <strong>Message:</strong> {{share.message}}<br>
-                                    </div>
+                                    </p>
                                     <div><b>Share with:</b></div>
                                     <div *ngFor="let list of share.sharedPeople;let i=index">
                                         <div>{{i+1}}) {{list}}</div>
@@ -86,15 +88,15 @@
                             </div>
                         </div>
 
+
                         <div *ngIf="!ownSharedFiles">
                             <br>
                             <p style="text-align: center;">No Files has been shared</p>
                         </div>
 
-
-
                     </ng-template>
                 </mat-tab>
+
             </mat-tab-group>
 
         </div>
