--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -20,6 +20,8 @@
         <mat-list-item role="listitem"><a routerLink="/admin-panel/attendance-details" mat-list-item>Attendance
             Details</a>
         </mat-list-item>
+        <mat-list-item role="listitem"><a routerLink="/admin-panel/add-documents-links" mat-list-item>Add Documents</a>
+        </mat-list-item>
       </mat-list>
 
 
