--- a/src/app/teacher/documents/documents.component.css
+++ b/src/app/teacher/documents/documents.component.css
@@ -1,7 +1,4 @@
-.image {
-  -webkit-user-drag: none;
-  -khtml-user-drag: none;
-  -moz-user-drag: none;
-  -o-user-drag: none;
-  user-drag: none;
+
+.date-font{
+  font-size: 13px;
 }
