Document image changed

--- a/src/app/view-document/view-document.component.html
+++ b/src/app/view-document/view-document.component.html
@@ -4,7 +4,7 @@
             <div class="pdfFile" [innerHTML]="html"></div>
             <div class="top-layer" (contextmenu)="checkClick($event)">
                 <img height="600" width="450"
-                    src="https://img.freepik.com/free-photo/wall-wallpaper-concrete-colored-painted-textured-concept_53876-31799.jpg?size=626&ext=jpg">
+                    src="../../assets/copyright_NineMiles.png">
             </div>
         </div>
     </div>
